# AG-XGuard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
agx/: __init__.py  _config.py  _models.py  _pipeline.py  cage.py  cli.py  guard.py  otel.py  store.py
agx/dashboard/: __init__.py  server.py
agx/dashboard/templates/: base.html  index.html  run_detail.html  scanner.html  vaccines.html
agx/scanner/: __init__.py  analyzer.py  heuristics.py  llm_doctor.py  yaml_exporter.py
tests/: test_cage.py  test_guard.py  test_pipeline.py  test_scanner.py  test_store.py
tests/fixtures/: sample_logs.jsonl
